--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,7 @@ phases:
 
   build:
     commands:
+    on-failure: ABORT 
       - echo Building the project
       - ls -l
       - npm run build
