--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,7 @@ files:
   - source: build/
     destination: /var/www/html/
     overwrite: yes
-
+file_exists_behavior: OVERWRITE
 hooks:
   AfterInstall:
     - location: scripts/install_dependencies.sh
